--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -35,8 +35,8 @@
   }
 
   .read-more-dialog .read-more-content {
-    width: 100vw;
-    height: 100vh;
+    width: 90vw;
+    height: 95dvh;
 
     justify-content: center;
   }
